--- a/public/account.html
+++ b/public/account.html
@@ -231,10 +231,20 @@
     const DIETS = Array.isArray(allergenConfig.DIETS) ? allergenConfig.DIETS : [];
     const normalizeAllergen = typeof allergenConfig.normalizeAllergen === 'function'
       ? allergenConfig.normalizeAllergen
-      : (value) => (value || '').toString().trim().toLowerCase();
+      : (value) => {
+          const raw = String(value ?? '').trim();
+          if (!raw) return '';
+          if (!ALLERGENS.length) return raw;
+          return ALLERGENS.includes(raw) ? raw : '';
+        };
     const normalizeDietLabel = typeof allergenConfig.normalizeDietLabel === 'function'
       ? allergenConfig.normalizeDietLabel
-      : (value) => value;
+      : (value) => {
+          const raw = String(value ?? '').trim();
+          if (!raw) return '';
+          if (!DIETS.length) return raw;
+          return DIETS.includes(raw) ? raw : '';
+        };
     const formatAllergenLabel = typeof allergenConfig.formatAllergenLabel === 'function'
       ? allergenConfig.formatAllergenLabel
       : (value) => value;
