Hide appeal URLs in notifications

--- a/public/manager-dashboard.html
+++ b/public/manager-dashboard.html
@@ -756,6 +756,11 @@
       max-width: 90%;
     }
 
+    .chat-preview-item a {
+      color: #4c5ad4;
+      text-decoration: underline;
+    }
+
     .chat-preview-item.outgoing {
       align-self: flex-end;
       background: rgba(79, 110, 255, 0.2);
