--- a/public/kitchen-tablet.html
+++ b/public/kitchen-tablet.html
@@ -213,7 +213,8 @@
       box-shadow: 0 0 0 3px rgba(92, 108, 210, 0.15);
     }
 
-    .hardware-buttons button {
+    .hardware-buttons button,
+    .kitchen-action-row button {
       border-radius: 10px;
       padding: 12px 20px;
       font-size: 0.95rem;
@@ -226,39 +227,48 @@
       transition: all 0.2s ease;
     }
 
-    .hardware-buttons button.primary-btn {
+    .hardware-buttons button.primary-btn,
+    .kitchen-action-row .primary-btn {
       background: linear-gradient(135deg, #5c6cd2, #4a5bc7);
       border: none;
       color: #fff;
       box-shadow: 0 4px 16px rgba(92, 108, 210, 0.35);
     }
 
-    .hardware-buttons button.primary-btn:hover:not(:disabled) {
+    .hardware-buttons button.primary-btn:hover:not(:disabled),
+    .kitchen-action-row .primary-btn:hover:not(:disabled) {
       background: linear-gradient(135deg, #6b7bd9, #5565cf);
       transform: translateY(-1px);
       box-shadow: 0 6px 20px rgba(92, 108, 210, 0.45);
     }
 
-    .hardware-buttons button.secondary-btn {
+    .hardware-buttons button.secondary-btn,
+    .kitchen-action-row .secondary-btn {
       background: rgba(92, 108, 210, 0.12);
       border: 1px solid rgba(92, 108, 210, 0.3);
       color: rgba(255, 255, 255, 0.8);
     }
 
-    .hardware-buttons button.secondary-btn:hover:not(:disabled) {
+    .hardware-buttons button.secondary-btn:hover:not(:disabled),
+    .kitchen-action-row .secondary-btn:hover:not(:disabled) {
       background: rgba(92, 108, 210, 0.2);
       border-color: rgba(92, 108, 210, 0.4);
     }
 
-    .hardware-buttons button.danger-btn {
-      background: rgba(239, 68, 68, 0.14);
-      border: 1px solid rgba(239, 68, 68, 0.4);
-      color: #fca5a5;
+    .hardware-buttons button.danger-btn,
+    .kitchen-action-row .danger-btn {
+      background: linear-gradient(135deg, rgba(239, 68, 68, 0.85), rgba(220, 38, 38, 0.85));
+      border: 1px solid rgba(239, 68, 68, 0.6);
+      color: #fff;
+      box-shadow: 0 4px 14px rgba(239, 68, 68, 0.35);
     }
 
-    .hardware-buttons button.danger-btn:hover:not(:disabled) {
-      background: rgba(239, 68, 68, 0.22);
-      border-color: rgba(239, 68, 68, 0.6);
+    .hardware-buttons button.danger-btn:hover:not(:disabled),
+    .kitchen-action-row .danger-btn:hover:not(:disabled) {
+      background: linear-gradient(135deg, rgba(248, 113, 113, 0.9), rgba(239, 68, 68, 0.9));
+      border-color: rgba(248, 113, 113, 0.8);
+      transform: translateY(-1px);
+      box-shadow: 0 6px 18px rgba(239, 68, 68, 0.45);
     }
 
     .hardware-buttons button:disabled {
