--- a/public/server-tablet.html
+++ b/public/server-tablet.html
@@ -222,6 +222,20 @@
       border-color: rgba(92, 108, 210, 0.4);
     }
 
+    .server-order-actions button.danger-btn {
+      background: linear-gradient(135deg, rgba(239, 68, 68, 0.85), rgba(220, 38, 38, 0.85));
+      border: 1px solid rgba(239, 68, 68, 0.6);
+      color: #fff;
+      box-shadow: 0 4px 14px rgba(239, 68, 68, 0.35);
+    }
+
+    .server-order-actions button.danger-btn:hover:not(:disabled) {
+      background: linear-gradient(135deg, rgba(248, 113, 113, 0.9), rgba(239, 68, 68, 0.9));
+      border-color: rgba(248, 113, 113, 0.8);
+      transform: translateY(-1px);
+      box-shadow: 0 6px 18px rgba(239, 68, 68, 0.45);
+    }
+
     .server-order-actions button:disabled {
       opacity: 0.5;
       cursor: not-allowed;
